update style for imma

--- a/assets/css/wfc_style.css
+++ b/assets/css/wfc_style.css
@@ -93,3 +93,9 @@
 .d-none {
     display: none;
 }
+
+/* For IMMA app */
+body input.MuiInputBase-input {
+    padding: 16.5px 14px !important;
+    border: none;
+}
