--- a/assets/css/wfc_style.css
+++ b/assets/css/wfc_style.css
@@ -32,6 +32,7 @@
 #top-menu-nav .wfc-account {
     cursor: pointer;
     display: none;
+	float: right;
 }
 
 #top-menu-nav .wfc-account::before {
@@ -40,9 +41,10 @@
     display: block;
     width: 30px;
     height: 30px;
-    margin-right: 5px;
+    margin-right: 6px;
     margin-top: -8px;
     opacity: .6;
+	position: relative;
 }
 
 #top-menu-nav .wfc-account a {
@@ -97,5 +99,5 @@
 /* For IMMA app */
 body input.MuiInputBase-input {
     padding: 16.5px 14px !important;
-    border: none;
+	border: none;
 }
